--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,9 +21,13 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation 'com.android.support:recyclerview-v7:27.1.1'
+    implementation 'com.android.support:support-core-ui:27.1.1'
     implementation 'com.android.support:design:27.1.0'
     implementation 'com.squareup.retrofit2:retrofit:2.3.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.8.0'
     implementation 'com.github.bumptech.glide:glide:4.6.1'
+    implementation 'com.romandanylyk:pageindicatorview:1.0.2'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
 }
